Add and embed the organizer's pictures

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ resources to work seamlessly across various software ecosystems.
     <div class="w3-content">
       <h2>Organizers</h2>
         <h5 class="w3-text-black">
-          <p> <strong>Weifeng Zhang, Lightelligence</strong> </p>
+          <p> <img style="float:left;  margin-right: 10px;" src="portraits/portrait-weifeng.png"  width="auto">
+	     <strong>Weifeng Zhang, Lightelligence</strong> <br>
   Dr. Weifeng Zhang is the Chief Architect and VP of Software at Lightelligence Inc, 
   responsible for hardware software co-design and software ecosystem to empower optical 
   computing and interconnect technologies. Prior to joining Lightelligence, Weifeng was a fellow 
@@ -124,15 +125,19 @@ resources to work seamlessly across various software ecosystems.
   Open Computing Project Foundation (OCP) and was also a founding member of 
   the Board of Directors at MLCommons&#8482; (MLPerf&#8482;). Weifeng received his PhD 
   in Computer Science from University of California, San Diego (UCSD).
+		</p>
         </h5>
         <h5 class="w3-text-black">
-          <p><strong>Dharmesh Jani, Meta Platforms</strong></p>
+          <p> <img style="float:left;  margin-right: 10px;" src="portraits/portrait-dj.png"  width="auto">
+		  <strong>Dharmesh Jani, Meta Platforms</strong><br>
 Dharmesh Jani (‘DJ’) leads Infrastructure Technology Ecosystem and Partnerships at Meta and has been an active member of OCP since 2012. He is also co-chair of the OCP Incubation 
 Committee where he started the OCP strategic initiatives, launched multiple projects such Sustainability and is a founding member of the Board of Directors for UCIe consortium. Prior to Meta, he has worked in Fortune 500 companies leading product development 
 as well as in startups building zero to one businesses. He has BTech from IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
+		</p>
         </h5>
         <h5 class="w3-text-black">
-          <p><strong>Vijay Janapa Reddi, Harvard University</strong></p>
+          <p> <img style="float:left;  margin-right: 10px;" src="portraits/portrait-vijay.png"  width="auto">
+		  <strong>Vijay Janapa Reddi, Harvard University</strong><br>
            Prof. Janapa Reddi is an Associate Professor in John A. Paulson School of Engineering and Applied Sciences at Harvard University,
           a founding member of MLCommons and serves on the MLCommons&#8482; Board of Directors, and a Co-Chair of MLPerf Inference 
           that is responsible for fair and useful benchmarks for measuring training
@@ -143,6 +148,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
           Best Paper at the 2009 International Symposium on High Performance Computer Architecture (HPCA), 
           MICRO and HPCA Hall of Fame (2018 and 2019, respectively), and IEEE’s Top Picks in Computer Architecture awards (2006, 2010, 2011, 2016, 2017). 
           He received a Ph.D. in computer science from Harvard University. 
+		</p>
         </h5>
     </div>
   </div>   
