Add linkedin page to organizers

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ resources to work seamlessly across various software ecosystems.
     <div class="w3-content">
       <h2>Organizers</h2>
         <h5 class="w3-text-black">
-          <p> <img style="float:left;  margin-right: 10px;" src="portraits/portrait-weifeng.png"  width="auto">
-	     <strong>Weifeng Zhang, Lightelligence</strong> <br>
+          <p> <img style="float:left;  margin-right: 20px; margin-top:10px;" src="portraits/portrait-weifeng.png"  width="auto">
+	<strong>  <a href="https://www.linkedin.com/in/weifeng-zhang-9021aa3/"> Weifeng Zhang</a>, Lightelligence</strong> <br>
   Dr. Weifeng Zhang is the Chief Architect and VP of Software at Lightelligence Inc, 
   responsible for hardware software co-design and software ecosystem to empower optical 
   computing and interconnect technologies. Prior to joining Lightelligence, Weifeng was a fellow 
@@ -128,16 +128,16 @@ resources to work seamlessly across various software ecosystems.
 		</p>
         </h5>
         <h5 class="w3-text-black">
-          <p> <img style="float:left;  margin-right: 10px;" src="portraits/portrait-dj.png"  width="auto">
-		  <strong>Dharmesh Jani, Meta Platforms</strong><br>
+          <p> <img style="float:left;  margin-right: 20px; margin-top: 10px;" src="portraits/portrait-dj.png"  width="auto">
+		  <strong> <a href="https://www.linkedin.com/in/djani/">Dharmesh Jani</a>, Meta Platforms</strong> <br>
 Dharmesh Jani (‘DJ’) leads Infrastructure Technology Ecosystem and Partnerships at Meta and has been an active member of OCP since 2012. He is also co-chair of the OCP Incubation 
 Committee where he started the OCP strategic initiatives, launched multiple projects such Sustainability and is a founding member of the Board of Directors for UCIe consortium. Prior to Meta, he has worked in Fortune 500 companies leading product development 
 as well as in startups building zero to one businesses. He has BTech from IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
 		</p>
         </h5>
         <h5 class="w3-text-black">
-          <p> <img style="float:left;  margin-right: 10px;" src="portraits/portrait-vijay.png"  width="auto">
-		  <strong>Vijay Janapa Reddi, Harvard University</strong><br>
+          <p> <img style="float:left;  margin-right: 20px; margin-top:10px;" src="portraits/portrait-vijay.png"  width="auto">
+		<strong> <a href="https://www.linkedin.com/in/vijay-janapa-reddi-63a6a173/"> Vijay Janapa Reddi</a>, Harvard University</strong> <br>
            Prof. Janapa Reddi is an Associate Professor in John A. Paulson School of Engineering and Applied Sciences at Harvard University,
           a founding member of MLCommons and serves on the MLCommons&#8482; Board of Directors, and a Co-Chair of MLPerf Inference 
           that is responsible for fair and useful benchmarks for measuring training
