--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Invited talk </td>
-			<td align="left">Nathan K. <br> Cooporate Fellow<br> John Wuu <br> Sr Fellow</td>
+			<td align="left">Nathan K. <br> Corporate Fellow<br> John Wuu <br> Sr Fellow</td>
 			<td align="left"> Challenges and Obstacles to Overcome to Reach Chiplet Nirvana </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
