Add short intro to a few speakers.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong><br>
         UCIe Chair, Sr Fellow, Intel <br>
-        &nbsp;
+        Chief Architect of I/O Technologies and Standards: Responsible for driving Intel-wide critical interconnect technologies
+	in PCIe, CXL, Intel’s coherency interconnect, on-package interconnects, as well as on-die standards (PIPE, LPIF, CPI, SFI).
        </td>
 		</tr>
 
@@ -215,7 +216,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left" style="background-color:#F0F0F0;">
         <strong><a href="https://www.linkedin.com/in/sajjad-moazeni-a7925339/">Dr. Sajjad Moazeni</a></strong><br>
         Professor, University of Washington <br>
-        &nbsp;
+        Ph.D. in Electrical Engineering and Computer Sciences from UC Berkeley. Interested in integrated system design
+	and photonics with applications in computing and communication, sensing and imaging, and life sciences.
        </td>
 		</tr>
     <tr style="vertical-align:middle">
@@ -223,7 +225,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/vijay-janapa-reddi-63a6a173/">Dr. Vijay Janapa Reddi</a></strong><br>
         Professor, Harvard University <br>
-        &nbsp;
+        Direct the Edge Computing Lab at Harvard with focus on mobile and edge-centric computing systems. Solve computing problems
+	in the field of computer architecture, robotics and ML etc.
        </td>
 		</tr>
 
@@ -232,7 +235,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left" style="background-color:#F0F0F0;">
         <strong><a href="https://www.linkedin.com/in/cliff-grossner-ph-d-9194871/">Dr. Cliff Grossner</a></strong><br>
         VP of Marketing Intelligence & Innovation, OCP <br>
-        &nbsp;
+        &nbsp;Driving awareness of Open Compute Projet Foundation (OCP) and guiding OCP futures technology initiative research directions.
        </td>
 		</tr>
       </tbody>
