Fix the intro for Vijay

--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/vijay-janapa-reddi-63a6a173/">Dr. Vijay Janapa Reddi</a></strong><br>
         Professor, Harvard University <br>
-        Direct the Edge Computing Lab at Harvard with focus on mobile and edge-centric computing systems. Solve computing problems
-	in the field of computer architecture, robotics and ML etc.
+        Direct the Edge Computing Lab at Harvard. Research interests span the definition of computer architecture,
+	including software design and optimization, to enhance mobile quality-of-experience and improve the energy-efficiency
+	of high-performance computing systems.
        </td>
 		</tr>
 
