Add bio for Kaisheng

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 	<tbody>
     <tr style="vertical-align:middle">
 			<td width="30%" align="center"><img src="./portraits/portrait-huaiyu.png" height="auto" </td>
-			<td width="70%" align="left" style="background-color:#F0F0F0;">
+			<td width="70%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng</a></strong><br>
         Co-Founder & CTO, Lightelligence <br>
         &nbsp;
@@ -174,12 +174,13 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/kaisheng-ma-a1613561/">Dr. Kaisheng Ma</a></strong><br>
         Professor, Tsinghua University <br>
-        &nbsp;
+        Research interests lie in the interdisciplinary fields of human-machine interface (HMI), 
+	brain-spired AI algorithm design, computer vision for self-driving, compact model design, computer architecture and microelectronics.
        </td>
 		</tr>
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-john.png" height="auto" </td>
-			<td width="20%" align="left" style="background-color:#F0F0F0;">
+			<td width="20%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong><br>
         Sr Fellow, AMD <br>
         &nbsp;
@@ -195,7 +196,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-jeff.png" height="auto" </td>
-			<td width="20%" align="left" style="background-color:#F0F0F0;">
+			<td width="20%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/jeff-defilippi-2012a62/">Jeff Defilippi</a></strong><br>
         Sr Director Product Management, ARM <br>
         &nbsp;
@@ -213,7 +214,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-sajjad.png" height="auto" </td>
-			<td width="20%" align="left" style="background-color:#F0F0F0;">
+			<td width="20%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/sajjad-moazeni-a7925339/">Dr. Sajjad Moazeni</a></strong><br>
         Professor, University of Washington <br>
         Ph.D. in Electrical Engineering and Computer Sciences from UC Berkeley. Interested in integrated system design
@@ -233,10 +234,10 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-cliff.png" height="auto" </td>
-			<td width="20%" align="left" style="background-color:#F0F0F0;">
+			<td width="20%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/cliff-grossner-ph-d-9194871/">Dr. Cliff Grossner</a></strong><br>
         VP of Marketing Intelligence & Innovation, OCP <br>
-        &nbsp;Driving awareness of Open Compute Projet Foundation (OCP) and guiding OCP futures technology initiative research directions.
+        Driving awareness of Open Compute Projet Foundation (OCP) and guiding OCP futures technology initiative research directions.
        </td>
 		</tr>
       </tbody>
