Fix the link to universities.

--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-kaisheng.png" height="auto" </td>
 			<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/kaisheng-ma-a1613561/">Dr. Kaisheng Ma</a></strong><br>
+        <strong><a href="https://group.iiis.tsinghua.edu.cn/~maks/">Dr. Kaisheng Ma</a></strong><br>
         Professor, Tsinghua University <br>
-        Research interests lie in the interdisciplinary fields of human-machine interface (HMI), 
-	brain-spired AI algorithm design, computer vision for self-driving, compact model design, computer architecture and microelectronics.
+ 	Principal Investigator of ARChip Lab at Tsinghua University. His research focuses on computer architecture, implanted devices,
+	AI Algorithms Design, focusing on interpretation, robustness and compact model design.
        </td>
 		</tr>
     <tr style="vertical-align:middle">
@@ -215,7 +215,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-sajjad.png" height="auto" </td>
 			<td width="20%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/sajjad-moazeni-a7925339/">Dr. Sajjad Moazeni</a></strong><br>
+        <strong><a href="https://people.ece.uw.edu/moazeni_sajjad/">Dr. Sajjad Moazeni</a></strong><br>
         Professor, University of Washington <br>
         Ph.D. in Electrical Engineering and Computer Sciences from UC Berkeley. Interested in integrated system design
 	and photonics with applications in computing and communication, sensing and imaging, and life sciences.
@@ -224,7 +224,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-vijay.png" height="auto" </td>
 			<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/vijay-janapa-reddi-63a6a173/">Dr. Vijay Janapa Reddi</a></strong><br>
+        <strong><a href="https://scholar.harvard.edu/vijay-janapa-reddi/">Dr. Vijay Janapa Reddi</a></strong><br>
         Professor, Harvard University <br>
         Direct the Edge Computing Lab at Harvard. Research interests span the definition of computer architecture,
 	including software design and optimization, to enhance mobile quality-of-experience and improve the energy-efficiency
