--- a/index.html
+++ b/index.html
@@ -183,14 +183,16 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong><br>
         Sr Fellow, AMD <br>
-        &nbsp;
+       	Leading AMD memory architecture, foundry memory technology interface, advanced memory technique development, 
+	and emerging memory technology evaluation and design. Deliver high performance caches, large arrays, 
+	and memory test chips.
        </td>
 		</tr>
     <tr style="vertical-align:middle">
 			<td width="15%" align="center"><img src="./portraits/portrait-nathan.png" height="auto" </td>
 			<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a></strong><br>
-        Coorporate Fellow, AMD <br>
+        Corporate Fellow, AMD <br>
         &nbsp;
        </td>
 		</tr>
@@ -248,7 +250,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <li> <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng</a></strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong><a href="https://www.linkedin.com/in/kaisheng-ma-a1613561/">Dr. Kaisheng Ma</a></strong>, Professor, Tsinghua University </li>
 <li> <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong>, Sr Fellow, AMD </li>
-<li> <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a> </strong>, Coorporate Fellow, AMD </li>
+<li> <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a> </strong>, Corporate Fellow, AMD </li>
 <li> <strong><a href="https://www.linkedin.com/in/jeff-defilippi-2012a62/">Jeff Defilippi</a></strong>, Sr Director Product Management, ARM </li>
 <li> <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong>, UCIe Chair, Sr Fellow, Intel </li>
 <li> <strong><a href="https://www.linkedin.com/in/sajjad-moazeni-a7925339/">Dr. Sajjad Moazeni</a></strong>, Professor, University of Washington </li>
