--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>HiPChips at HPCA-2023</title>
   <meta charset="UTF-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata"> 
   <style>
