--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     }     
     table {border: none;}
     h1 {
-        font-size: 36px;
+        font-size: xx-large;
     }
     h2 {
-        font-size: 32px;
+        font-size: x-large;
         border-bottom: 1px solid #cccccc;
         color: black;
     }
@@ -38,7 +38,7 @@
 <body>
     <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-sidebar w3-black w3-card w3-left-align w3-large" style="width:min-content; height:fit-content; opacity:90%; ">
+  <div class="w3-sidebar w3-black w3-card w3-left-align w3-large" style="width:min-content; height:fit-content; opacity:70%; ">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-small w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#home" class="w3-bar-item w3-button w3-padding-small w3-hover-blue">Home</a>
     <a href="#intro" class="w3-bar-item w3-button w3-hide-small w3-padding-small w3-hover-blue">Introduction</a>
