--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/jeff-defilippi-2012a62/">Jeff Defilippi</a></strong><br>
         Sr Director Product Management, ARM <br>
-        &nbsp;
+        Help ARM define architectures and IP products to address the computing needs of future cloud to edge infrastructure.  
        </td>
 		</tr>
     <tr style="vertical-align:middle">
