--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a></strong><br>
         Corporate Fellow, AMD <br>
-        &nbsp;
+        Lead architect of AMD’s Infinity Fabric, responsible for delivering coherent interconnect protocol and technology
+	across all AMD products. He is passionate about open standards to enable heterogenous computing. 
+	He is a member of the Board of Directors at Compute Express Link (CXL)  and Universal Chiplet Interconnect Express(UCIE) consortia.
        </td>
 		</tr>
     <tr style="vertical-align:middle">
