Add Huaiyu's bio

--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td width="80%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng</a></strong><br>
         Co-Founder & CTO, Lightelligence <br>
-        &nbsp;
+        PhD in Electrical Engineering from MIT, focusing on integrated photonics in CMOS platform for telecom,
+	datacom, and bio-sensing applications. At Lightelligence, Huaiyu is responsible for product
+	definition and technology roadmap planning.
        </td>
 		</tr>
     <tr style="vertical-align:middle">
