--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
     <div class="w3-content">
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
-          <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
+          <p>Sunday Feb 26th, 2023, 1:20pm - 5:40pm (local time) <br>
+		Hotel Bonaventure, St Lauren #3 </p>
           <p  style="font-size:8px; ">
 		  
  <table cellpadding="5" cellspacing="0" style="width:100%">
@@ -290,67 +291,67 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<th width="15%">Notes</th>
 		</tr>
 		<tr>
-			<td align="left">Open Remark<br><small> 1:00-1:15pm</small></td>
+			<td align="left">Open Remark<br><small> 1:20-1:35pm</small></td>
 			<td align="left">Dharmesh Jani <br> Co-Chair</td>
 			<td align="left"> Chiplets for AI/ML: challenges and opportunities </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
-			<td align="left"> Invited talk <br><small>1:15-1:40pm</small> </td>
+			<td align="left"> Invited talk <br><small>1:35-2:00pm</small> </td>
 			<td align="left">Dr. Huaiyu Meng<br> Co-Founder & CTO</td>
 			<td align="left"> Optical Network-on-Chip for large scale chiplet architectures </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left">Invited talk <br><small>1:40-2:05pm</small> </td>
+			<td align="left">Invited talk <br><small>2:00-2:25pm</small> </td>
 			<td align="left">Dr. Kaisheng Ma<br>Professor</td>
 			<td align="left"> A Scalable Methodology for Designing Efficient Interconnection Network of Chiplets</td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
-			<td align="left"> Invited talk <br><small>2:05-2:30pm</small> </td>
+			<td align="left"> Invited talk <br><small>2:25-2:50pm</small> </td>
 			<td align="left">Nathan K. <br> Corporate Fellow<br> John Wuu <br> Sr Fellow</td>
 			<td align="left"> Challenges and Obstacles to Overcome to Reach Chiplet Nirvana </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left">Invited talk <br><small>2:30-2:55pm</small> </td>
+			<td align="left">Invited talk <br><small>2:50-3:15pm</small> </td>
 			<td align="left"> Jeff Defilippi<br> Sr Director</td>
 			<td align="left"> Building Heterogeneous Chiplets with AMBA Interconnects </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightblue; vertical-align:middle">
-			<td align="left"> Coffee Break <br><small>2:55-3:05pm</small> </td>
+			<td align="left"> Coffee Break <br><small>3:15-3:30pm</small> </td>
 			<td align="left"> &nbsp; </td>
 			<td align="left"> &nbsp; </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left">Invited talk <br><small>3:05-3:30pm</small> </td>
+			<td align="left">Invited talk <br><small>3:30-3:55pm</small> </td>
 			<td align="left"> Dr. Debendra Das Sharma<br> UCIe Chair </td>
 			<td align="left"> Universal Chiplet Interconnect Express (UCIe)TM : An open standard for innovations at the package level </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
-			<td align="left"> Invited Talk <br><small>3:30-3:55pm</small> </td>
+			<td align="left"> Invited Talk <br><small>3:55-4:20pm</small> </td>
 			<td align="left"> Dr. Sajjad Moazeni<br> Professor </td>
 			<td align="left"> Next Generation Co-Packaged Optics for Future Disaggregated AI System </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left">Invited talk <br><small>3:55-4:20pm</small> </td>
+			<td align="left">Invited talk <br><small>4:20-4:40pm</small> </td>
 			<td align="left"> Dr. Cliff Grossner <br> VP of OCP </td>
 			<td align="left"> Establishing a New Open Chiplet Economy </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
-			<td align="left">Invited talk <br><small>4:20-4:45pm</small> </td>
+			<td align="left">Invited talk <br><small>4:40-5:10pm</small> </td>
 			<td align="left"> Dr. Vijay Janapa Reddi<br> Co-Chair </td>
 			<td align="left"> Scalable Chiplet Architecture for HPC and Science (TBD) </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr>
-			<td align="left"> Close Remark <br><small>4:45-5:00pm</small> </td>
+			<td align="left"> Close Remark <br><small>5:10-5:25pm</small> </td>
 			<td align="left"> Dr. Weifeng Zhang<br> Co-Chair </td>
 			<td align="left"> Enabling Polymorphic AI Architecture via Composable Chiplet Technologies</td>
 			<td align="center"> &nbsp; </td>
