--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:20pm - 5:40pm (local time) <br>
-		Hotel Bonaventure, St Lauren #3 </p>
+		Hotel Bonaventure, St Laurent #3 </p>
           <p  style="font-size:8px; ">
 		  
  <table cellpadding="5" cellspacing="0" style="width:100%">
@@ -339,13 +339,13 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left">Invited talk <br><small>4:20-4:40pm</small> </td>
+			<td align="left">Invited talk <br><small>4:20-4:45pm</small> </td>
 			<td align="left"> Dr. Cliff Grossner <br> VP of OCP </td>
 			<td align="left"> Establishing a New Open Chiplet Economy </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
-			<td align="left">Invited talk <br><small>4:40-5:10pm</small> </td>
+			<td align="left">Invited talk <br><small>4:45-5:10pm</small> </td>
 			<td align="left"> Dr. Vijay Janapa Reddi<br> Co-Chair </td>
 			<td align="left"> Scalable Chiplet Architecture for HPC and Science (TBD) </td>
 			<td align="center"> &nbsp;</td>
