--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:20pm - 5:40pm (local time) <br>
-		Hotel Bonaventure, St Laurent #3 </p>
+		Hotel Bonaventure, St Laurent #3 <br>
+		Zoom Meeting: https://us06web.zoom.us/j/88934598690?pwd=MWk2NW5rY2YxU2VBVkRBL015c0xJUT09 <br>
+		Zoom Password: hipchips
+		</p>
           <p  style="font-size:8px; ">
 		  
  <table cellpadding="5" cellspacing="0" style="width:100%">
