Change the zoom meeting href

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:20pm - 5:40pm (local time) <br>
 		Hotel Bonaventure, St Laurent #3 <br>
-		Zoom Meeting: <a href="https://us06web.zoom.us/j/88934598690?pwd=MWk2NW5rY2YxU2VBVkRBL015c0xJUT09">Meeting ID: 889 3459 8690</a> <br>
+		Zoom Meeting: <a href="https://us06web.zoom.us/j/88934598690?pwd=MWk2NW5rY2YxU2VBVkRBL015c0xJUT09">join meeting here</a> (ID: 889 3459 8690) <br>
 		Zoom Password: hipchips
 		</p>
           <p  style="font-size:8px; ">
