--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="left"> Enabling Polymorphic AI Architecture via Composable Chiplet Technologies</td>
 			<td align="center"> &nbsp; </td>
 		</tr>
-		<tr style="background-color:lightgray; vertical-align:middle">
+		<tr style="background-color:lightblue; vertical-align:middle">
 			<td align="left">Open Chat<br><small>5:25-6:00pm</small> </td>
 			<td align="left"> &nbsp; </td>
 			<td align="left"> Informal, open conversions for all attendees. </td>
