--- a/index.html
+++ b/index.html
@@ -348,21 +348,15 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
-			<td align="left">Invited talk <br><small>4:45-5:10pm</small> </td>
-			<td align="left"> Dr. Vijay Janapa Reddi<br> Co-Chair </td>
-			<td align="left"> Scalable Chiplet Architecture for HPC and Science (TBD) </td>
-			<td align="center"> &nbsp;</td>
-		</tr>
-		<tr>
-			<td align="left"> Close Remark <br><small>5:10-5:25pm</small> </td>
+			<td align="left"> Close Remark <br><small>4:45-5:10pm</small> </td>
 			<td align="left"> Dr. Weifeng Zhang<br> Co-Chair </td>
 			<td align="left"> Enabling Polymorphic AI Architecture via Composable Chiplet Technologies</td>
 			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr style="background-color:lightblue; vertical-align:middle">
-			<td align="left">Open Chat<br><small>5:25-6:00pm</small> </td>
-			<td align="left"> &nbsp; </td>
-			<td align="left"> Informal, open conversions for all attendees. </td>
+			<td align="left">Open Chat<br><small>5:10-6:00pm</small> </td>
+			<td align="left"> Host: Prof. Vijay Janapa Reddi </td>
+			<td align="left"> Informal, open discussions for all attendees </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
   </tbody>
