--- a/index.html
+++ b/index.html
@@ -296,31 +296,31 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="left">Open Remark<br><small> 1:20-1:35pm</small></td>
 			<td align="left">Dharmesh Jani <br> Co-Chair</td>
 			<td align="left"> Chiplets for AI/ML: challenges and opportunities </td>
-			<td align="center"> &nbsp;</td>
+			<td align="center"> <a href="./HPCA-2023/00-HiPChips%202023%20Opening.pdf">slides</a> </td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Invited talk <br><small>1:35-2:00pm</small> </td>
 			<td align="left">Dr. Huaiyu Meng<br> Co-Founder & CTO</td>
 			<td align="left"> Optical Network-on-Chip for large scale chiplet architectures </td>
-			<td align="center"> &nbsp; </td>
+			<td align="center"> coming soon </td>
 		</tr>
 		<tr>
 			<td align="left">Invited talk <br><small>2:00-2:25pm</small> </td>
 			<td align="left">Dr. Kaisheng Ma<br>Professor</td>
 			<td align="left"> A Scalable Methodology for Designing Efficient Interconnection Network of Chiplets</td>
-			<td align="center"> &nbsp;</td>
+			<td align="center"><a href="./HPCA-2023/02-Presentation-Tsinghua-revised.pdf">slides</a> </td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Invited talk <br><small>2:25-2:50pm</small> </td>
 			<td align="left">Nathan K. <br> Corporate Fellow<br> John Wuu <br> Sr Fellow</td>
 			<td align="left"> Challenges and Obstacles to Overcome to Reach Chiplet Nirvana </td>
-			<td align="center"> &nbsp; </td>
+			<td align="center"> <a href="./HPCA-2023/03-HipChips2023_ChipletNirvana_AMD.pdf">slides</a> </td>
 		</tr>
 		<tr>
 			<td align="left">Invited talk <br><small>2:50-3:15pm</small> </td>
 			<td align="left"> Jeff Defilippi<br> Sr Director</td>
 			<td align="left"> Building Heterogeneous Chiplets with AMBA Interconnects </td>
-			<td align="center"> &nbsp;</td>
+			<td align="center"> <a href="./HPCA-2023/04-HPCA_HipChips_AMBA_for_chiplets_26Feb2023.pdf">slides</a> </td>
 		</tr>
 		<tr style="background-color:lightblue; vertical-align:middle">
 			<td align="left"> Coffee Break <br><small>3:15-3:30pm</small> </td>
@@ -332,31 +332,31 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="left">Invited talk <br><small>3:30-3:55pm</small> </td>
 			<td align="left"> Dr. Debendra Das Sharma<br> UCIe Chair </td>
 			<td align="left"> Universal Chiplet Interconnect Express (UCIe)TM : An open standard for innovations at the package level </td>
-			<td align="center"> &nbsp;</td>
+			<td align="center"> <a href="./HPCA-2023/05-HPCA_HiPChips_2023 Das Sharma.pdf">slides</a> </td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Invited Talk <br><small>3:55-4:20pm</small> </td>
 			<td align="left"> Dr. Sajjad Moazeni<br> Professor </td>
 			<td align="left"> Next Generation Co-Packaged Optics for Future Disaggregated AI System </td>
-			<td align="center"> &nbsp; </td>
+			<td align="center"> <a href="./HPCA-2023/06-HPCA2023_Moazeni.pdf">slides</a> </td>
 		</tr>
 		<tr>
 			<td align="left">Invited talk <br><small>4:20-4:45pm</small> </td>
 			<td align="left"> Dr. Cliff Grossner <br> VP of OCP </td>
 			<td align="left"> Establishing a New Open Chiplet Economy </td>
-			<td align="center"> &nbsp;</td>
+			<td align="center"> <a href="./HPCA-2023/07-HipChips OCP ODSA Overview 23 0223 cg.pdf">slides</a> </td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Close Remark <br><small>4:45-5:10pm</small> </td>
 			<td align="left"> Dr. Weifeng Zhang<br> Co-Chair </td>
 			<td align="left"> Enabling Polymorphic AI Architecture via Composable Chiplet Technologies</td>
-			<td align="center"> &nbsp; </td>
+			<td align="center"> <a href="./HPCA-2023/08-HPCA-2023-Polymorphic-Architecture-v3.pdf">slides</a> </td>
 		</tr>
 		<tr style="background-color:lightblue; vertical-align:middle">
 			<td align="left">Open Chat<br><small>5:10-6:00pm</small> </td>
 			<td align="left"> Host: Prof. Vijay Janapa Reddi </td>
 			<td align="left"> Informal, open discussions for all attendees </td>
-			<td align="center"> &nbsp;</td>
+			<td align="center">  </td>
 		</tr>
   </tbody>
  </table>
