Add the missing PPT

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="left"> Invited talk <br><small>1:35-2:00pm</small> </td>
 			<td align="left">Dr. Huaiyu Meng<br> Co-Founder & CTO</td>
 			<td align="left"> Optical Network-on-Chip for large scale chiplet architectures </td>
-			<td align="center"> coming soon </td>
+			<td align="center"> <a href="./HPCA-2023/01-HiPChips_HPCA2023_Lightelligence_HuaiyuMeng.pdf">slides</a> </td>
 		</tr>
 		<tr>
 			<td align="left">Invited talk <br><small>2:00-2:25pm</small> </td>
