Update the Youtube status

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ resources to work seamlessly across various software ecosystems.
   responsible for hardware software co-design and software ecosystem to empower optical 
   computing and interconnect technologies. Prior to joining Lightelligence, Weifeng was a fellow 
   of Alibaba Cloud and the Chief Scientist of Heterogeneous Computing at Alibaba Cloud
-  Infrastructure. He currently is the Tech Chair of AI Co-Design Workgroup at 
-  Open Computing Project Foundation (OCP) and was also a founding member of 
-  the Board of Directors at MLCommons&#8482; (MLPerf&#8482;). Weifeng received his PhD 
+  Infrastructure. He was a founding member of the Board of Directors at MLCommons&#8482; (MLPerf&#8482;) and 
+  currently serves as the Tech Chair of AI Co-Design Workgroup at 
+  Open Computing Project Foundation (OCP). Weifeng received his PhD 
   in Computer Science from University of California, San Diego (UCSD).
 		</p>
         </h5>
@@ -280,7 +280,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:20pm - 5:40pm (EST) <br>
 		Hotel Bonaventure, St Laurent #3 <br>
-		Zoom Meeting: over (the recorded video will be uploaded to YouTube)
+		Zoom Meeting: over (YouTube video coming soon)
 		</p>
           <p  style="font-size:8px; ">
 		  
@@ -290,7 +290,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<th width="15%">Session</th>
 			<th width="20%">Speaker</th>
 			<th width="50%">Title</th>
-			<th width="15%">Notes</th>
+			<th width="15%">Material</th>
 		</tr>
 		<tr>
 			<td align="left">Open Remark<br><small> 1:20-1:35pm</small></td>
