--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 </div>
 	
 <!-- Header with image -->
-<header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="home">
-  <div class="w3-display-middle w3-center">
-    <h1 style="text-align: center;" id="t1">The HiPChips Conference</h1>
+<!-- header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="home" -->
+  <div class="w3-container w3-center" style="background-color:lightgray" id="home">
+    <h1 style="text-align: center;">The HiPChips Conference</h1>
   </div>
-</header>
-  
+<!-- /header -->
+
     <h3 style="text-align: center;">The 2nd International Workshop on</h3>
     <h3 style="text-align: center;">High Performance Chiplet and Interconnnect Architectures (<strong>HiPChips</strong>) </h3>
     <h4 style="text-align: center;">Co-located with &nbsp;<a href="https://hpca-conf.org/2023/" style="color: blue">HPCA 2023</a> at Montreal, Canada</h4>
