--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 <!-- /header -->
 
-    <h3 style="text-align: center;">The 2nd International Workshop on</h3>
+    <h3 style="text-align: center;">The 2<sup>nd</sup> International Workshop on</h3>
     <h3 style="text-align: center;">High Performance Chiplet and Interconnnect Architectures (<strong>HiPChips</strong>) </h3>
     <h4 style="text-align: center;">Co-located with &nbsp;<a href="https://hpca-conf.org/2023/" style="color: blue">HPCA 2023</a> at Montreal, Canada</h4>
     <h4 style="text-align: center;">February 26th, 2023</h4>
