--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="left"> Invited talk <br><small>2:25-2:50pm</small> </td>
 			<td align="left">Nathan K. <br> Corporate Fellow<br> John Wuu <br> Sr Fellow</td>
 			<td align="left"> Challenges and Obstacles to Overcome to Reach Chiplet Nirvana </td>
-			<td align="center"> <a href="./HPCA-2023/">slides</a> </td>
+			<td align="center"> <a href="./HPCA-2023/HipChips2023_ChipletNirvana_AMD.pdf">slides</a> </td>
 		</tr>
 		<tr>
 			<td align="left">Invited talk <br><small>2:50-3:15pm</small> </td>
